ChangeLog for package rkwarddev

## 0.05-1 (2012-01-04)
  - removed superfluous "level=1" arguments from automatic "rk.header()"s in rk.JS.doc()
  - added wrapper function rk.XML.checkbox() for rk.XML.cbox()
  - changed rk.JS.saveobj() to use ".GlobalEnv$" instead of "assign()" in the resulting code

## 0.05-0 (2011-12-14)
  - "result.header" now doesn't add quotes by itself in rk.JS.doc(), so you can have R objects pasted.
    previous scripts need to be adapted accordingly! the headers can also be deactivated by setting to FALSE or ""
  - fixed show method for objects of class rk.JS.var with more than one variable object
  - added support for global variables to rk.JS.doc() and rk.plugin.component(), and therefore also rk.plugin.skeleton()
  - "variables" and "globals" in rk.JS.doc() can now also be given as objects of class rk.JS.var
  - worked on the vignette

## 0.04-13 (2011-12-12)
  - set default value of checked checkboxes to "true" in rk.XML.cbox()
  - rk.XML.connect() now correctly supports 'governor="<ID>.<modifier>.not"'

## 0.04-12 (2011-12-11)
  - added function tf() for even quicker JavaScript code generation from checkboxes
  - fixed issue with "about" not being an XML node in rk.plugin.skeleton()

## 0.04-11 (2011-12-10)
  - ite() now supports full recursion also for the "thenjs" option.
  - fixed superfluous first newline in rk.JS.vars()

## 0.04-10 (2011-12-05)
  - when using rk.comment() for logic scripting, its contents will automatically be placed inside a <script> node now

## 0.04-9 (2011-12-03)
  - left over stuff from JS printout() function is now added to doPrintout()

## 0.04-8 (2011-11-10)
  - R 2.14 creates source archives which are incompatible with earlier versions. attempt to deal with this
    by adding empty R directory and NAMESPACE file

## 0.04-7 (2011-11-08)
  - added long description support to rk.XML.about(), used for the DESCRIPTION file

## 0.04-6 (2011-10-31)